--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,11 @@
 
 # production
 /build
-
+.idea
 # misc
-.DS_Store
+
+
+
 .env.local
 .env.development.local
 .env.test.local
@@ -20,4 +22,3 @@
 
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log
