--- a/package.json
+++ b/package.json
@@ -3,15 +3,12 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
-		"bootstrap": "^4.3.1",
-		"core-js": "3",
-		"normalize.css": "^8.0.1",
+		"core-js": "3.1.2",
 		"prop-types": "^15.7.2",
 		"react": "^16.8.6",
 		"react-dom": "^16.8.6",
 		"react-redux": "^7.0.3",
-		"react-scripts": "3.0.0",
-		"reactstrap": "^8.0.0",
+		"react-scripts": "^3.0.1",
 		"redux": "^4.0.1",
 		"redux-logger": "^3.0.6"
 	},
