--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
 	"dependencies": {
 		"chart.js": "^2.8.0",
 		"core-js": "3.1.2",
-		"prop-types": "^15.7.2",
 		"react": "^16.8.6",
 		"react-chartjs-2": "^2.7.6",
 		"react-dom": "^16.8.6",
@@ -38,6 +37,8 @@
 	},
 	"devDependencies": {
 		"redux-devtools-extension": "^2.13.8",
-		"run-script-os": "^1.0.5"
+		"run-script-os": "^1.0.5",
+		"prop-types": "^15.7.2"
+
 	}
 }
