--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
 		"build": "react-scripts build",
 		"build:win32": "rmdir /S /Q build",
 		"build:linux": "rm -rf build",
-		"build-to-deploy:linux": "yarn run build && node deploy.js",
+		"build-to-deploy:linux": "npm run build && node deploy.js",
 		"test": "react-scripts test",
 		"eject": "react-scripts eject",
-		"resetDependency": "rm -rf ./node_modules && yarn install"
+		"resetDependency": "rm -rf ./node_modules && npm install"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -38,7 +38,8 @@
 	"devDependencies": {
 		"redux-devtools-extension": "^2.13.8",
 		"run-script-os": "^1.0.5",
-		"prop-types": "^15.7.2"
-
+		"prop-types": "^15.7.2",
+		"process": "latest",
+		"argparse": "latest"
 	}
 }
