--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
 		]
 	},
 	"devDependencies": {
+		"@babel/core": "^7.4.5",
+		"@babel/node": "^7.4.5",
 		"argparse": "latest",
 		"process": "latest",
 		"prop-types": "^15.7.2",
